# personal-makeshift-screenreader

./: .gitignore  Cargo.toml  bun.lockb  crosshair.html  ex.js  gleam.toml  index.html  manifest.toml  package-lock.json  package.json  preferences.html  rescript.json  settings.html  svelte.config.js  tailwind.config.js  vite.config.js
.svelte-kit/: ambient.d.ts
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
src/: Async.res  Browser.res  Browser.res.js  Command.res  Const.res  Crosshair.res  Main.res  Main.res.js  Page.res  Page__Settings.res  Preferences.res  Settings.res  Tauri.res  app.html  crosshair.gleam  index.html  main.rs  main.ts  preferences.gleam  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: crosshair.json  default.json  settings.json
src-tauri/src/: Tauri.res  cmds.rs  color_filtering.rs  error.rs  lib.rs  main.rs
src/lib/: settings.ts
src/lib/component/: KeyboardShortcutInput.svelte  index.ts
src/preferences/: preferences.gleam
src/routes/: +layout.svelte
src/routes/settings/: +page.svelte
wasm/: .gitignore  Cargo.toml
wasm/src/: components.rs  futs.rs  lib.rs  page.rs  providers.rs  settings.rs  tauri.rs
wasm/src/components/: cursor_finder.rs
wasm/src/page/: crosshair.rs  settings.rs
wasm/src/page/crosshair/: fut.rs
wasm/src/providers/: read_clipboard_aloud.rs
wgpu/: Cargo.toml
wgpu/src/: main.rs  shader.wgsl
