[package]
name = "wasm"
version = "0.1.0"
authors = ["Jose Quesada <jquesada2016@fau.edu>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
futures = "0.3"
gloo = "0.10"
error-stack = "0.4"
leptos = { version = "0.5.0-beta", features = ["csr"] }
leptos_tea = "0.6.0-beta"
tauri-api-wasm = { path = "/dev/rust/crates/tauri-api-wasm" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-subscriber-wasm = "0.1"
typed-builder = "0.15"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "SpeechSynthesis", "SpeechSynthesisUtterance"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
