[package]
name = "wasm"
version = "0.1.0"
authors = ["joseprogdp"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7" }
derive_more = { version = "2.0.1", features = ["full"] }
futures = "0.3.31"
gloo = { version = "0.11.0", features = ["futures"] }
leptos = { version = "0.8.2", features = ["csr", "tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-subscriber-wasm = "0.1.0"
typed-builder = "0.21.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["CssStyleDeclaration"] }

[profile.release]
opt-level = "s"
