[package]
name = "read-clipboard-aloud-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
error-stack = "0.4.1"
mouse_position = "0.1.3"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
wgpu = "0.20"
winit = "0.30"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
